[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.8"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"



[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "1.6.8"
solana-validator = "1.6.8"

[lib]
crate-type = ["cdylib", "lib"]
